cmake_minimum_required(VERSION 3.15)
project(messaging)

set(CMAKE_CXX_STANDARD 17)
find_package(PythonExtensions REQUIRED)
find_package(Cython REQUIRED)
find_package(OpenMP REQUIRED)

add_cython_target(messaging CXX PY3)
add_cython_target(bench CXX PY3)
add_library(messaging MODULE ${messaging})
add_library(bench MODULE ${bench})
target_link_libraries(messaging cpp-module-static)
target_link_libraries(bench cpp-module-static)
target_link_libraries(bench OpenMP::OpenMP_CXX)
python_extension_module(messaging)
python_extension_module(bench)

install(TARGETS messaging LIBRARY DESTINATION messaging)
install(TARGETS bench LIBRARY DESTINATION bench)